--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -44,5 +44,6 @@ $sidebar-screen-min-width   : 1024px;
     --global-text-color                 : #{$dark-gray};
     --global-text-color-light           : #{$light-gray};
     --global-thead-color                : #{$lighter-gray};
+    --archive-heading-color             : #1E3A5F;
 }
 
